--- a/demo/example.html
+++ b/demo/example.html
@@ -3,7 +3,9 @@
 <head>
 	<title>Scroom</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link href="example.css" rel="stylesheet" media="screen">
+	<link href="css/bootstrap.min.css" rel="stylesheet" media="screen">
+	<link href="css/bootstrap-responsive.min.css" rel="stylesheet" media="screen">
+	<link href="css/example.css" rel="stylesheet" media="screen">
 </head>
 <body>
 	<div id="scroom-block" class="scroom-block">
@@ -14,8 +16,34 @@
 	  		<span class="scroom-area" selection="disabled"></span>
 	  	</div>
 	</div>
+	<div class="modal fade hide" tabindex="-1" role="dialog" id="scroom-modal" aria-hidden="true">
+		<div class="modal-dialog">
+			<div class="modal-content">
+				<div class="modal-header">
+			      	<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+					<h4 class="modal-title">Modal title</h4>
+				</div>
+				<form id="scroom-form">
+				<div class="modal-body">
+						<div class="form-group">
+							<label for="name">Name</label>
+							<input type="text" class="form-control" id="name" placeholder="Name">
+						</div>
+						<div class="form-group">
+						  	<label for="description">Description</label>
+						    <input type="text" class="form-control" id="description" placeholder="Description">
+						</div>
+				</div>
+				<div class="modal-footer">
+					<button type="submit" class="btn btn-default">Submit</button>
+				</div>
+				</form>
+			</div><!-- /.modal-content -->
+		</div><!-- /.modal-dialog -->
+	</div><!-- /.modal -->
     <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
-    <script src="../scroom.js"></script>
-    <script src="example.js"></script>
+    <script src="js/bootstrap.min.js"></script>
+    <script src="../scroom/scroom.min.js"></script>
+    <script src="js/example.js"></script>
 </body>
 </html>
