--- a/demo/example.html
+++ b/demo/example.html
@@ -5,6 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link href="css/bootstrap.min.css" rel="stylesheet" media="screen">
 	<link href="css/bootstrap-responsive.min.css" rel="stylesheet" media="screen">
+	<link href="../scroom/scroom.min.css" rel="stylesheet" media="screen">
 	<link href="css/example.css" rel="stylesheet" media="screen">
 </head>
 <body>
